@@ -1,4 +1,5 @@
 Changes towards version 0.7:
+- Fixed the 64KB size limitation on key-value files (bug #1112) - Alex
 - Update download paths for the new SourceForge File Release system - Michael
 - Fix UAC issues with installer for cleaner Vista/Win7 installs - Michael
 - Fixed compilation with Netplay disabled (bug #1091), from Sze Howe Koh
